--- a/nx303.html
+++ b/nx303.html
@@ -284,11 +284,11 @@
     </div>
     <amp-img data-hero src="https://dekatdihati.store/2025/nx/slot88-nx303.webp" width="800" height="800" title="sbobet" id="primaryimage" layout="responsive" alt="sbobet"></amp-img>
     <div class="link-container container">
-        <a href="https://linknx-303.click/" class="animated-button1" target="_blank" rel="nofollow noopener"><span></span>
+        <a href="https://cdwt.shop/" class="animated-button1" target="_blank" rel="nofollow noopener"><span></span>
         <span></span>
         <span></span>
         <span></span><strong>DISINI LOGIN</strong></a>
-        <a href="https://linknx-303.click/" class="animated-button1" target="_blank" rel="nofollow noopener"><span></span>
+        <a href="hhttps://cdwt.shop/" class="animated-button1" target="_blank" rel="nofollow noopener"><span></span>
         <span></span>
         <span></span>
         <span></span><strong>DISINI DAFTAR</strong></a>
@@ -303,19 +303,19 @@
 
     <div class="copy">&copy;copyright 2025 | By Support <strong>Seo Ibil</strong></div>
         <footer class="fixed-footer">
-        <a class="active" href="https://linknx-303.click/" role="button" target="_blank" rel="noopener noreferrer">
+        <a class="active" href="https://cdwt.shop/" role="button" target="_blank" rel="noopener noreferrer">
             <amp-img data-hero layout="intrinsic" height="25" width="25" src="/" alt="Promo NX303">
             </amp-img>PROMO
         </a>
-        <a class="active" href="https://linknx-303.click/" role="button" target="_blank" rel="noopener noreferrer">
+        <a class="active" href="https://cdwt.shop/" role="button" target="_blank" rel="noopener noreferrer">
             <amp-img data-hero layout="intrinsic" height="25" width="25" src="/" alt="Login NX303">
             </amp-img>LOGIN
         </a>
-        <a class="active" href="https://linknx-303.click/" role="button" target="_blank" rel="noopener noreferrer">
+        <a class="active" href="https://cdwt.shop/" role="button" target="_blank" rel="noopener noreferrer">
             <amp-img data-hero layout="intrinsic" height="25" width="25" src="/" alt="Daftar NX303">
             </amp-img>DAFTAR
         </a>
-        <a class="active" href="https://linknx-303.click/" role="button" target="_blank" rel="noopener noreferrer">
+        <a class="active" href="https://cdwt.shop/" role="button" target="_blank" rel="noopener noreferrer">
             <amp-img data-hero layout="intrinsic" height="25" width="25" src="/" alt="Live Chat NX303">
             </amp-img>LIVECHAT
         </a>
