--- a/nx303.html
+++ b/nx303.html
@@ -18,7 +18,6 @@
     <meta content="website" property="og:type"/>
     <meta content="NX303 » Link Login Resmi Situs Gacor Slot88 Auto Maxwin Hari Ini Anti Lag" property="og:title"/>
     <meta content="NX303 menyediakan link login resmi Situs Slot88 gacor hari ini. Nikmati pengalaman bermain slot online anti lag dengan winrate tinggi dan peluang auto maxwin yang lebih besar." property="og:description"/>
-    <meta content="https://cobskal.xyz/nx/numpang-lewat.html" property="og:url"/>
     <meta content="NX303 slot" property="og:site_name"/>
     <meta content="https://dekatdihati.store/2025/nx/slot88-nx303.webp" property="og:image"/>
     <meta content="NX303 resmi" property="og:image:alt"/>
@@ -282,7 +281,7 @@
         <amp-img data-hero layout="responsive" width="200" height="65" src="https://dekatdihati.store/2025/nx/logo-nx303-bos.webp" alt="agen sbobet" noloading></amp-img>
         </a>
     </div>
-    <amp-img data-hero src="https://dekatdihati.store/2025/nx/slot88-nx303.webp" width="800" height="800" title="sbobet" id="primaryimage" layout="responsive" alt="sbobet"></amp-img>
+    <amp-img data-hero src="https://dekatdihati.store/2025/nx/slot88-nx303.webp" width="800" height="800" title="link gacor" id="primaryimage" layout="responsive" alt="sbobet"></amp-img>
     <div class="link-container container">
         <a href="https://cdwt.shop/" class="animated-button1" target="_blank" rel="nofollow noopener"><span></span>
         <span></span>
