--- a/nx303.html
+++ b/nx303.html
@@ -287,7 +287,7 @@
         <span></span>
         <span></span>
         <span></span><strong>DISINI LOGIN</strong></a>
-        <a href="hhttps://cdwt.shop/" class="animated-button1" target="_blank" rel="nofollow noopener"><span></span>
+        <a href="https://cdwt.shop/" class="animated-button1" target="_blank" rel="nofollow noopener"><span></span>
         <span></span>
         <span></span>
         <span></span><strong>DISINI DAFTAR</strong></a>
