--- a/apps.html
+++ b/apps.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Warungplay Merupakan situs slot gacor server thailand yang menyediakan akun Pro JP Platinum secara gratis yang mudah menang" />
     <meta name="robots" content="index,follow" />
     <link href="https://ik.imagekit.io/cznem5obe/as.png" rel="icon" type="image/x-icon" />
-    <link rel="canonical" href="https://plotaverseapps.com/privacy-policy/" />
+    <link rel="canonical" href="https://plotaverseapps.com/" />
     <meta property="og:site_name" content="WARUNGPLAY" />
     <meta property="og:image:alt" content="WARUNGPLAY" />
     <meta property="og:image" content="https://636486-ae.myshopify.com/cdn/shop/files/Content-209.jpg" />
