--- a/apps.html
+++ b/apps.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Warungplay: Daftar Akun Pro JP Slot Gacor Server Thailand</title>
-    <meta name="description" content="Warungplay Merupakan situs slot gacor server thailand yang menyediakan akun Pro JP Platinum secara gratis yang mudah menang" />
+    <title>TISSOT4D: Daftar Akun Pro JP Slot Gacor Server Thailand</title>
+    <meta name="description" content="TISSOT4D Merupakan situs slot gacor server thailand yang menyediakan akun Pro JP Platinum secara gratis yang mudah menang" />
     <meta name="robots" content="index,follow" />
     <link href="https://ik.imagekit.io/cznem5obe/as.png" rel="icon" type="image/x-icon" />
     <link rel="canonical" href="https://plotaverseapps.com/" />
-    <meta property="og:site_name" content="WARUNGPLAY" />
-    <meta property="og:image:alt" content="WARUNGPLAY" />
-    <meta property="og:image" content="https://636486-ae.myshopify.com/cdn/shop/files/Content-209.jpg" />
+    <meta property="og:site_name" content="TISSOT4D" />
+    <meta property="og:image:alt" content="TISSOT4D" />
+    <meta property="og:image" content="https://plotaverseapps.com/img/images.png" />
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
     <script async src="https://cdn.ampproject.org/v0.js" nonce="MjE4NjQyMjYwNCwyNzg5OTc4NzM5"></script>
     <style amp-boilerplate>
@@ -235,19 +235,19 @@
     <div class="container">
       <header>
         <center>
-          <a href="https://cdwt.shop/warungplay">
-            <amp-img id="image" class="animated tada infinite slower" src="https://plotaverseapps.com/img/logo-warungplay-resmi.webp" alt="WARUNGPLAY" width="220" height="67.8" layout="intrinsic" style="margin-bottom: 10px;"></amp-img>
+          <a href="https://cdwt.shop/beruangplay">
+            <amp-img id="image" class="animated tada infinite slower" src="https://plotaverseapps.com/img/logo.gif" alt="TISSOT4D" width="220" height="67.8" layout="intrinsic" style="margin-bottom: 10px;"></amp-img>
           </a>
         </center>
       </header>
       <div class="welcome">
         <h3>SITUS GACOR TERPERCAYA</h3>
       </div>
-      <amp-img src="https://636486-ae.myshopify.com/cdn/shop/files/Content-209.jpg" width="1000" height="1200" layout="intrinsic" class="banner"></amp-img>
-      <a href="https://cdwt.shop/warungplay" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">DAFTAR WARUNGPLAY</a>
-      <a href="https://cdwt.shop/warungplay" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar glow-on-hover">LOGIN WARUNGPLAY</a>
+      <amp-img src="https://plotaverseapps.com/img/images.png" width="1000" height="1200" layout="intrinsic" class="banner"></amp-img>
+      <a href="https://cdwt.shop/beruangplay" target="_blank" rel="noreferrer noopener" role="button" class="btn-login glow-on-hover">DAFTAR TISSOT4D</a>
+      <a href="https://cdwt.shop/beruangplay" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar glow-on-hover">LOGIN TISSOT4D</a>
       <p>
-      <p class="copyright">&copy; 2025 | di Buat Oleh WARUNGPLAY | SITUS GACOR TERPERCAYA</p>
+      <p class="copyright">&copy; 2025 | di Buat Oleh TISSOT4D | SITUS GACOR TERPERCAYA</p>
     </div>
   </body>
 </html>
